[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "comfyui-iterator-suite"
version = "0.2.0"
description = "ComfyUI custom nodes for multi-dimensional iteration over files, checkpoints, and LoRAs"
requires-python = ">=3.8"
dependencies = []
